--- a/dev-mail-server-core/src/main/resources/templates/dms/index.html
+++ b/dev-mail-server-core/src/main/resources/templates/dms/index.html
@@ -8,8 +8,8 @@
 	<meta name="dms:path" th:content="${model.path}" />
 	<title>DevMailServer</title>
 	
-	<link rel="stylesheet" th:each="cssResource : ${cssResources}" th:href="@{|${cssResource}|}" />
-	<script th:each="jsResource : ${jsResources}" th:src="@{|${jsResource}|}"></script>
+	<link rel="stylesheet" th:each="resource : ${webResources}" th:if="${resource.type.name() == 'CSS'}" th:href="@{|${resource.file}|}" />
+	<script th:each="resource : ${webResources}" th:if="${resource.type.name() == 'JS'}" th:src="@{|${resource.file}|}"></script>
 	
 	<script type="text/html" id="listElement">
 		<a href="#" class="list-group-item list-group-item-action">
