simplify mail model on frontend and handle messages failed to read

--- a/dev-mail-server-frontend/src/index.css
+++ b/dev-mail-server-frontend/src/index.css
@@ -60,3 +60,12 @@ main {
 iframe {
 	border: 0;
 }
+
+.list-group-item {
+	height: 100px;
+	cursor: pointer;
+}
+
+.list-group-item.list-group-item-danger {
+	cursor: not-allowed;
+}
