add list clear and download buttons

--- a/dev-mail-server-frontend/src/index.css
+++ b/dev-mail-server-frontend/src/index.css
@@ -23,12 +23,28 @@ main {
 
 #list {
 	flex: 1;
-	overflow-y: scroll;
 	min-height: 0;
 }
 
+#list .card-body {
+	flex: 22;
+	display: flex;
+	flex-direction: column;
+	overflow-y: scroll;
+	min-height: 0;
+	padding: 0;
+}
+
+#list .card-header {
+	flex: 1;
+}
+
+#list .card-header button {
+	margin-right: 5px;
+}
+
 #preview {
-	flex: 2;
+	flex: 2.3;
 	display: flex;
 	flex-direction: column;
 }
@@ -68,4 +84,8 @@ iframe {
 
 .list-group-item.list-group-item-danger {
 	cursor: not-allowed;
+}
+
+button svg {
+	margin-right: 3px;
 }
