--- a/dev-mail-server-frontend/src/index.css
+++ b/dev-mail-server-frontend/src/index.css
@@ -34,6 +34,10 @@ main {
 	padding: 0;
 }
 
+#list .card-body .list-group-item {
+	min-height: 100px;
+}
+
 #list .card-header button {
 	margin-right: 5px;
 }
