--- a/dev-mail-server-frontend/src/index.css
+++ b/dev-mail-server-frontend/src/index.css
@@ -110,3 +110,20 @@ button svg, .badge svg {
 	bottom: 0;
 	right: 14px;
 }
+
+#loading-toast {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	margin: 15px;
+}
+
+#loading-toast .toast-body {
+	padding: 15px;
+}
+
+#loading-toast .toast-body > span {
+	margin-left: 8px;
+	font-size: 1.2em;
+	vertical-align: text-bottom;
+}
